@@ -100,9 +100,11 @@ public class WebSecurityConfig {
         corsConfiguration.setAllowCredentials(true);
         corsConfiguration.setAllowedOrigins(
                 List.of(
+                        "https://jujeokjujeok.netlify.app"
                         "http://localhost:5173",
                         "http://localhost:8080",
                         "http://ec2-43-201-61-252.ap-northeast-2.compute.amazonaws.com:8080/",
+                        "https://ec2-43-201-61-252.ap-northeast-2.compute.amazonaws.com:8080/",
                         "http://43-201-61-252:8080"
                 )
         );
@@ -110,7 +112,7 @@ public class WebSecurityConfig {
                 List.of("*")
         );
         corsConfiguration.setAllowedMethods(
-                Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH")
+                List.of("GET", "POST", "PUT", "DELETE", "PATCH")
         );
         corsConfiguration.setExposedHeaders(
                 List.of("*")
